# MGServer

./: CMakeLists.txt  README.md  linux_build.sh
MsgPacket/: CMakeLists.txt  CommonClass.cpp  CommonClass.h
client/: CMakeLists.txt  main.cpp
conf/: serverinfo.xml  serverinfo.xml.temp
hiredis/win/: CMakeLists.txt  readme
librdkafka/linux/examples/: rdkafka_example.cpp
librdkafka/linux/tests/: 0091-max_poll_interval_timeout.c
librdkafka/win/v140/Win32/Release/: librdkafka.lib  librdkafkacpp.exp  librdkafkacpp.lib
librdkafka/win/v140/x64/Release/: librdkafka.exp
librdkafka_win/: README.md
librdkafka_win/v140/Win32/Release/: librdkafka.exp
librdkafka_win/v140/x64/Release/: librdkafka.lib  librdkafkacpp.exp  librdkafkacpp.lib
libuv/: CMakeLists.txt
protobuf/: CMakeLists.txt
protobuf/google/protobuf/: any_test.pb.cc  map_proto2_unittest.pb.cc  map_unittest.pb.cc  unittest.pb.cc  unittest_arena.pb.cc  unittest_custom_options.pb.cc  unittest_drop_unknown_fields.pb.cc  unittest_embed_optimize_for.pb.cc  unittest_import.pb.cc  unittest_import_public.pb.cc  unittest_mset.pb.cc  unittest_mset_wire_format.pb.cc  unittest_no_arena.pb.cc  unittest_no_arena_import.pb.cc  unittest_no_field_presence.pb.cc  unittest_no_generic_services.pb.cc  unittest_preserve_unknown_enum.pb.cc  unittest_preserve_unknown_enum2.pb.cc  unittest_proto3_arena.pb.cc  unittest_well_known_types.pb.cc
protobuf/google/protobuf/compiler/cpp/: cpp_test_bad_identifiers.pb.cc  cpp_test_large_enum_value.pb.cc
protobuf/google/protobuf/util/: json_format_proto3.pb.cc  message_differencer_unittest.pb.cc
protobuf/google/protobuf/util/internal/testdata/: anys.pb.cc  books.pb.cc  default_value.pb.cc  default_value_test.pb.cc  field_mask.pb.cc  maps.pb.cc  oneofs.pb.cc  struct.pb.cc  timestamp_duration.pb.cc
protobufText/: geneProto.bat  login.proto  map.proto
server/: CMakeLists.txt  main.cpp  protocol.h  singleton.h
server/base/: EpollSocket.cpp  EpollSocket.h  GameServer.cpp  GameServer.h  GameSocketWatcher.cpp  GameSocketWatcher.h  Interface.cpp  Interface.h  MysqlHandle.cpp  RedisHandle.cpp  RedisHandle.h  ServerLog.h  WorkerThread.h  defines.h
server/gamelogic/: EntityPlayer.cpp  EntityPlayer.h  Monster.cpp  Monster.h  MsgDistribute.cpp  MsgDistribute.h
server/genproto/: login.pb.cc  login.pb.h  map.pb.cc  map.pb.h
server/header/: AcceptServer.h  EpollSocket.h  GameServer.h  GameServerWatcher.h  IocpBase.h  KafkaHandle.h  MainIocp.h  Monster.h  MysqlHandle.h  RedisHandle.h  ServerConf.h  ServerLog.h  ThreadPool.h  WebSocketStyle.h  WorkerThread.h  defines.h  player.h  sha1.h
server/source/: AcceptServer.cpp  DBConnector.cpp  DBConnector.h  EpollSocket.cpp  GameServer.cpp  GameServerWatcher.cpp  IocpBase.cpp  KafkaHandle.cpp  MainIocp.cpp  Monster.cpp  MysqlHandle.cpp  RedisHandle.cpp  ServerConf.cpp  ServerLog.cpp  ThreadPool.cpp  WebSocketStyle.cpp  WorkerThread.cpp  base64.cpp  sha1.cpp
tinyxml/: CMakeLists.txt
wepoll/: CMakeLists.txt
